--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.32",
+    "@types/react-dom": "^18.0.11",
+    "@types/styled-components": "^5.1.26",
+    "babel-plugin-macros": "^3.1.0",
     "dotenv": "^16.0.3",
     "firebase": "^9.15.0",
     "node-sass": "^7.0.3",
@@ -25,6 +31,8 @@
     "reselect": "^4.1.7",
     "stripe": "^11.13.0",
     "styled-components": "^5.3.6",
+    "typed-redux-saga": "^1.5.0",
+    "typescript": "^5.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -52,6 +60,7 @@
     ]
   },
   "devDependencies": {
+    "@types/redux-logger": "^3.0.9",
     "netlify-cli": "^12.10.0"
   }
 }
